--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   postgrest: ^2.0.0 
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
+  flutter_svg: ^2.0.10+1
 
   # navegación
   go_router: ^13.0.0
@@ -74,6 +75,7 @@ flutter_icons:
   ios: true
   image_path: "assets/icons/barberiapp.png"
 
+
 flutter_native_splash:
   color: "#000000"                       # fondo negro
   image: assets/icons/barberiapp.png     # tu calavera (512x512)
@@ -90,6 +92,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/icons/social/
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
