--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  supabase_flutter: ^2.5.6
+  supabase_flutter: ^2.10.0   # o la última estable
+  app_links: ^6.1.0  
   postgrest: ^2.0.0 
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.2.1
 
   # navegación
   go_router: ^13.0.0
@@ -91,6 +92,7 @@ flutter:
   generate: true                  # ← convierte generate en mapa
   uses-material-design: true
   assets:
+    - assets/icons/social/Instagram.svg
     - assets/icons/
     - assets/icons/social/
 
