--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   supabase_flutter: ^2.5.6   # o la última estable
+  google_sign_in: ^6.2.1
   app_links: ^6.1.0  
   postgrest: ^2.0.0 
   intl: ^0.19.0
