--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^1.2.2
+  url_launcher: ^6.3.0
   google_fonts: ^6.2.1
   flutter:
     sdk: flutter
