--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^1.2.2
   url_launcher: ^6.3.0
   google_fonts: ^6.2.1
+  geocoding: ^2.2.0
   flutter:
     sdk: flutter
   flutter_localizations:
